Updates app title to Labby

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Labs example app</title>
+        <title>Labby</title>
         <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
     </head>
     <body>
@@ -25,6 +25,12 @@
         <div class="users-column">
             <div class="column-header">Users:</div>
             <div id="all-users-anchor"></div>
+        </div>
+
+        <!-- Display Assignments -->
+        <div class="users-column">
+            <div class="column-header">Assignments:</div>
+            <div id="all-assignments-anchor"></div>
         </div>
 
 
