Add frontend auth via Auth0

--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -31,3 +31,7 @@ body .users-column .user-display-ele button {
 body .users-column .user-display-ele .edit-view {
   display: none;
 }
+
+body .hidden {
+  display: none;
+}
