--- a/src/views/index.html
+++ b/src/views/index.html
@@ -16,47 +16,55 @@
 
         <div class="protected" id="profile">
             <p>
-              <strong>Logged in.</strong>.
+              <strong>Logged in.</strong>
             </p>
             <label>
               Access token:
               <pre id="ipt-access-token"></pre>
             </label>
-            <label>
+            <!--<label>
               User profile:
               <pre id="ipt-user-profile"></pre>
-            </label>
+            </label>-->
           </div>
 
-        <!-- Add Users -->
-        <div class="users-column add-user-col protected">
-            <div class="column-header">Add User:</div>
-            <div>
-                <input id="name-input" placeholder="Name">
-            </div>
-            <div>
-                <input id="email-input" placeholder="Email">
-            </div>
-            <div>
-                <button id="add-user-btn">Add</button>
-            </div>
+        <!-- Attendance -->
+        <div class="display-column protected">
+            <div class="column-header">Attendance</div>
+            <!-- <form action="/attendance" method="post" enctype="multipart/form-data"> -->
+            <form id="attendance-form" enctype="multipart/form-data">
+                <label for="event-type">Event Type:</label>
+                <select name="event-type" id="event-type" required>
+                    <option value="Stakeholder Meeting">Stakeholder Meeting</option>
+                    <option value="Product Review">Product Review</option>
+                </select>
+                <!-- Used in submission metadata to prevent the same date being used for multiple milestones-->
+                <label for="event-date">Event Date:</label>
+                <input name="event-date" id="event-date" type="date" required>
+                <!--<label for="start-date">Start Date:</label>
+                <input name="start-date" id="start-date" type="date">
+                <label for="start-date">Start Time (Pacific):</label>
+                <input name="start-time" id="start-time" type="time">
+                <label for="end-date">End Date:</label>
+                <input name="start-date" id="start-date" type="date">
+                <label for="end-date">End Time (Pacific):</label>
+                <input name="end-time" id="end-time" type="time">-->
+                <label for="attendance-file">Attendees (CSV):</label>
+                <input type="file" name="attendance-file" id="attendance-file" accept="text/csv,.csv" required />
+                <button id="submit-attendance-btn">Submit</button>
+            </form>
         </div>
 
         <!-- Display Users -->
-        <div class="users-column protected">
+        <!--<div class="display-column protected">
             <div class="column-header">Users:</div>
             <div id="all-users-anchor"></div>
-        </div>
-
-        <!-- Display Assignments -->
-        <div class="users-column protected">
-            <div class="column-header">Assignments:</div>
-            <div id="all-assignments-anchor"></div>
-        </div>
+        </div>-->
 
 
 
     </body>
     <script src="https://cdn.auth0.com/js/auth0-spa-js/1.13/auth0-spa-js.production.js"></script>
+    <script src="scripts/papaparse.min.js"></script>
     <script type="module" src="scripts/index.js"></script>
 </html>
